Waypoint confirmation radius param
