# src/main/kotlin/pl/dev/bkwiatkowski/controller/events/dto/response/EventDetailResponseDto.kt
@@ -19,6 +19,7 @@ data class EventDetailResponseDto(
   val startDate: LocalDateTime,
   val startLocationX: Float,
   val startLocationY: Float,
+  val waypointRadiusMeters: Float,
   val status: EventStatus,
   val eventType: EventType,
   val eventWaypoints: List<WaypointResponseDto>,
