# src/main/kotlin/pl/dev/bkwiatkowski/controller/events/dto/response/EventListResponseDto.kt
@@ -18,6 +18,7 @@ data class EventListResponseDto(
   val startDate: LocalDateTime,
   val startLocationX: Float,
   val startLocationY: Float,
+  val waypointRadiusMeters: Float,
   val createdByUsername: String,
   val eventType: EventType,
   val eventWaypoints: List<WaypointResponseDto>,
