# src/main/kotlin/pl/dev/bkwiatkowski/domain/model/Event.kt
@@ -12,6 +12,7 @@ data class Event(
   val startDate: LocalDateTime,
   val startLocationX: Float,
   val startLocationY: Float,
+  val waypointRadiusMeters: Float,
   val status: EventStatus,
   val eventWaypoints: List<MapWaypoint> = emptyList(),
   val eventType: EventType,
